--- a/tatraja/public/index.html
+++ b/tatraja/public/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%;">
+<html lang="en" style="height: 100%; scroll-behavior: smooth;">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Tatraja is a public community of artists, making its way into the world of Web 3.0." />
+  <meta name="keywords"
+    content="nft, nft meaning, nft marketplace, nft art, nft crypto, opensea nft, how to make an nft, 
+              electrical art, technological art, pixel art, art breeder, wall art, art museum, art showcase, 
+              Photography, Analog, Abstract, photo collage, crypto currency, crypto, cryptonews, solana, 
+              solana crypto, photo editor, photo,  HTML, CSS, JavaScript">
 
+  <meta name="author" content="Robert Fiser, Martin Jaros, Ivan Velkov">
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <title>React App</title>
+  <title>Tatraja Art</title>
 
 </head>
 
 <body style="height: 100%">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" style="height: 100%"></div>
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </body>
 
 </html>
