--- a/tatraja/public/index.html
+++ b/tatraja/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%; scroll-behavior: smooth;">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
   <meta charset="utf-8" />
@@ -27,11 +27,17 @@
 
   <title>Tatraja Art</title>
 
+  <style>
+    body::-webkit-scrollbar {
+  display: none;
+}
+  </style>
+
 </head>
 
-<body style="height: 100%">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" style="height: 100%"></div>
+  <div id="root"></div>
 </body>
 
 </html>
